# smc-utils

./: Cargo.toml  README.md
smc-cli/: Cargo.toml  README.md
smc-cli/src/: command.rs  func.rs  lib.rs  main.rs
smc-lib/: Cargo.toml  README.md
smc-lib/src/: io.rs  lib.rs  structs.rs  value.rs
