[package]
name = "smc-lib"
version = "0.1.0"
edition = "2024"
description = "Library for interacting with Apple SMC keys"
license.workspace = true
repository.workspace = true
readme = "README.md"

keywords = ["smc", "macOS", "apple", "hardware"]
categories = ["os::macos-apis", "hardware-support"]

[dependencies]
libc = { version = "0.2.180", default-features = false }
objc2-io-kit = { version = "0.3.2", features = ["libc"], default-features = false }
