[package]
name = "smc-lib"
version = "0.1.2"
edition = "2024"
description = "Library for interacting with Apple SMC keys"
license.workspace = true
repository.workspace = true
readme = "README.md"

keywords = ["smc", "macOS", "apple", "hardware"]
categories = ["os::macos-apis", "hardware-support"]

[package.metadata.docs.rs]
default-target = "aarch64-apple-darwin"
targets = ["x86_64-apple-darwin", "aarch64-apple-darwin"]

[dependencies]
libc = { version = "0.2.180", default-features = false }
objc2-io-kit = { version = "0.3.2", features = ["libc"], default-features = false }
